This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance.
============================================================================
11/2/20: Changed cosine power specification in the tilt series setup dialog to
be expressed in terms of increase in exposure from 0 to 60 degrees.

11/2/20: Added properties to control tilt range and increment of the fine
eucenticity task.

11/1/20: Fixed crash when autocentering beam and fixed focus problems with
autocenter setup dialog (In 3.8).

10/28/20: Added property to get means of a subarea during the fine
eucentricity routine.

10/28/20: Extended "UsableAtMag" property to apply at all mags with a 0 mag
index (In 3.8).

10/28/20: In Hole Finder, required hole spacing to be at least 0.5 um more
than the diameter (In 3.8).

10/28/20: More property name changes for new DE server version (In 3.8).

10/28/20: Fixed crash on starting program with a beam intensity calibration
that is all zeros (In 3.8).

10/20/20: Fixed MakeNavPointsAtHoles command (In 3.8).

10/18/20: SEM_3-8-3
10/18/20: Fixed problems with builds of shrmemframe and FrameGPU which should
fix GPU problems in multiple contexts; SEMCCD still fails to load FrameGPU in
GMS 3.42, but shrmemframe will load a FrameGPU in the parent plugins directory
and frame alignment can use the GPU under 3.42 through shared memory (In 3.8).

10/16/20: Fixed lack of delay after image shift at end of first round of IS
from Scratch, which caused drift in first image of second round (In 3.8).

10/15/20: Improved detection of lens relaxation completion on JEOL (In 3.8).

10/16/20: Fixed some broken functions in script processors.

10/16/20: Made Realign to Item work with non-centered subarea when staying in
low dose for alignments shots.

10/16/20: Added property to use Trial size for tasks instead of full field.

