@@ -247,6 +247,7 @@ BOOL_PROP_TEST("JeolSTEMmagUnitsAreX", scope->, JeolSTEMunitsX)
 BOOL_PROP_TEST("JeolReadStageForWait", scope->, JeolReadStageForWait)
 INT_PROP_TEST("JeolFlashFegTimeout", scope->, JeolFlashFegTimeout)
 INT_PROP_TEST("JeolEmissionTimeout", scope->, JeolEmissionTimeout)
+BOOL_PROP_TEST("SkipJeolNeutralCheck", scope->, SkipJeolNeutralCheck)
 INT_PROP_TEST("SimulationMode", scope->, SimulationMode)
 INT_PROP_TEST("RestoreStageXYdelay", scope->, RestoreStageXYdelay)
 BOOL_PROP_TEST("UseInvertedMagRange", scope->, UseInvertedMagRange)
