@@ -4005,6 +4005,11 @@
             range and gets clipped to its limiting values.</TD>
         </TR>
         <TR VALIGN="top">
+          <TD>SkipJeolNeutralCheck</TD>
+          <TD>Set to 1 to skip the checks for the validity of the neutral IS values, which 
+            by default occur once at each mag.</TD>
+        </TR>
+        <TR VALIGN="top">
           <TD>ShootFilmIfMontageDark</TD>
           <TD>Set to 1 to retry taking an image after talking a film picture when a montage 
             frame falls below the minimum counts set by the user with <A HREF="menu_camera.htm#hid_camera_setcountlimit">
